<resources>
    <string name="app_name">Datting</string>
    <string name="facebook_app_id">260022692147954</string>
    <string name="fb_login_protocol_scheme">fb260022692147954</string>
    <string name="welcome">Chào mừng bạn đến với SuperTato.</string>
    <string name="please_comply">Vui lòng tuân thủ các Quy tắc chung này.</string>
    <string name="be_yourself">Hãy là chính bạn.</string>
    <string name="content_be_yourself">Đảm bảo ảnh, độ tuổi và tiểu sửa đều thể hiện đúng con người bạn.</string>
    <string name="always_ensure_safety">Luôn đảm bảo an toàn.</string>
    <string name="content_always_ensure_safety">Đừng vội vàng chia sẻ thông tin cá nhân.</string>
    <string name="people_play">Chơi phải chất.</string>
    <string name="content_people_play">Tôn trọng người khác và đối xửa với họ đúng như cách bạn muốn được mọi người thể hiện với bạn.</string>
    <string name="Be_active_dont_be_shy">Hãy chủ động đừng nhút nhát quá.</string>
    <string name="content_Be_active_dont_be_shy">Luôn trình báo hành vi xấu.</string>
    <string name="me_accept">Tôi đồng ý</string>
    <string name="Login">Đăng nhập</string>
    <string name="Register">Đăng kí tài khoản</string>
    <string name="Error_login">Sự cố khi đăng nhập?</string>
    <string name="note">Bằng cách bấm vào Đăng Nhập hoặc Đăng Kí Tài Khoản Mới, bạn đồng ý với Điều Khoản của chúng tôi</string>
    <string name="Name">Tên người dùng</string>
    <string name="Date_of_birth">Ngày sinh</string>
    <string name="Sex">Giới tính</string>
    <string name="Hobbies">Sở thích</string>
    <string name="Phone_number">Số điện thoại</string>
    <string name="UserName">Tên đăng nhập</string>
    <string name="Password">Mật khẩu</string>
    <string name="Email">Email</string>
    <string name="completed">Hoàn tất</string>
    <string name="male">Nam</string>
    <string name="Female">Nữ</string>
    <string name="Error_message">Thông tin tài khoản không chính sác</string>
    <string name="profile">Chỉnh sửa thông tin</string>
    <string name="settings">Cài đặt</string>
    <string name="Logout">Đăng xuất</string>
    <string name="Open">Mở</string>
    <string name="Close">Đóng</string>
    <string name="Image">Thay đổi ảnh</string>
    <string name="RecentFriends">Bạn bè gần đây</string>
</resources>
