<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presenter.WelcomeActivity">

    <ScrollView
        android:id="@+id/srvContent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/btnAccept"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/padding_ll_welcome"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/ivlogo"
                android:layout_width="@dimen/logo"
                android:layout_height="@dimen/logo"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/magintop_logo"
                android:background="@drawable/ic_logo_24dp" />

            <TextView
                style="@style/welcome_text_large"
                android:gravity="center"
                android:textSize="@dimen/size_text_welcome"
                android:text="@string/welcome" />
            <TextView
                android:gravity="center"
                style="@style/welcome_text_small"
                android:text="@string/please_comply"/>

            <TextView
                android:layout_marginTop="@dimen/logo"
                style="@style/welcome_text_large"
                android:layout_marginLeft="@dimen/margin_left_welcome"
                android:text="@string/be_yourself"
                android:textSize="20sp"
                android:drawableLeft="@drawable/ic_yes_24dp"/>
            <TextView
                style="@style/welcome_text_small"
                android:layout_marginLeft="@dimen/margin_left_welcome"
                android:text="@string/content_be_yourself"      />

            <TextView
                android:layout_marginTop="12dp"
                style="@style/welcome_text_large"
                android:layout_marginLeft="@dimen/margin_left_welcome"
                android:text="@string/always_ensure_safety"
                android:textSize="20sp"
                android:drawableLeft="@drawable/ic_yes_24dp"/>
            <TextView
                style="@style/welcome_text_small"
                android:layout_marginLeft="@dimen/margin_left_welcome"
                android:text="@string/content_always_ensure_safety"
                />
            <TextView
                android:layout_marginTop="12dp"
                style="@style/welcome_text_large"
                android:layout_marginLeft="@dimen/margin_left_welcome"
                android:text="@string/people_play"
                android:textSize="20sp"
                android:drawableLeft="@drawable/ic_yes_24dp"/>
            <TextView
                style="@style/welcome_text_small"
                android:layout_marginLeft="@dimen/margin_left_welcome"
                android:text="@string/content_people_play"
                />
            <TextView
                android:layout_marginTop="12dp"
                style="@style/welcome_text_large"
                android:layout_marginLeft="@dimen/margin_left_welcome"
                android:text="@string/Be_active_dont_be_shy"
                android:textSize="20sp"
                android:drawableLeft="@drawable/ic_yes_24dp"/>
            <TextView
                style="@style/welcome_text_small"
                android:layout_marginLeft="@dimen/margin_left_welcome"
                android:text="@string/content_Be_active_dont_be_shy"
                />

        </LinearLayout>
    </ScrollView>

    <Button
        android:layout_marginBottom="60dp"
        android:id="@+id/btnAccept"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:background="@drawable/btn_accept"
        android:text="@string/me_accept"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/srvContent" />


</androidx.constraintlayout.widget.ConstraintLayout>