<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_pink"
    tools:context=".presenter.RegisterActivity">

    <Button
        android:id="@+id/btnBack"
        style="@style/btnBack"
        android:layout_marginLeft="14dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnBack">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/padding_ll_welcome"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnBack">

            <ImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:background="@drawable/ic_logo_white" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtNameUser"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/Name"
                android:textColorHint="@color/white"
                android:textSize="@dimen/text_size_register"
                android:theme="@style/myEditTextStyle" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/padding_content"
                android:text="@string/Date_of_birth"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_register" />

            <DatePicker
                android:id="@+id/cldDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:calendarViewShown="false"
                android:datePickerMode="spinner"
                android:textSize="20sp"
                android:theme="@style/myEditTextStyle" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/Phone_number"
                android:inputType="phone"
                android:maxLength="11"
                android:textColorHint="@color/white"
                android:textSize="@dimen/text_size_register"
                android:theme="@style/myEditTextStyle"
                app:counterEnabled="true"
                app:counterMaxLength="11" />

            <RadioGroup
                android:id="@+id/rbg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="@dimen/padding_content"
                android:theme="@style/myEditTextStyle">

                <RadioButton
                    android:id="@+id/rbMale"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/male"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_size_register" />

                <RadioButton
                    android:id="@+id/rbFemale"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Female"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_size_register" />
            </RadioGroup>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Hobbies"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_register" />

            <CheckBox
                android:id="@+id/cbXemPhim"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Xem phim"
                android:textColor="@color/white"
                android:theme="@style/myEditTextStyle" />

            <CheckBox
                android:id="@+id/cbChoiGame"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Chơi game"
                android:textColor="@color/white"
                android:theme="@style/myEditTextStyle" />

            <CheckBox
                android:id="@+id/cbDuLich"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Du lịch"
                android:textColor="@color/white"
                android:theme="@style/myEditTextStyle" />

            <CheckBox
                android:id="@+id/cbTheThao"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Thể thao"
                android:textColor="@color/white"
                android:theme="@style/myEditTextStyle" />

            <CheckBox
                android:id="@+id/cbKhac"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Khác"
                android:textColor="@color/white"
                android:theme="@style/myEditTextStyle" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtChamNgonSong"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Châm ngôn sống"
                android:inputType="textImeMultiLine"
                android:textColorHint="@color/white"
                android:textSize="@dimen/text_size_register"
                android:theme="@style/myEditTextStyle" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/Email"
                android:inputType="textEmailAddress"
                android:textColorHint="@color/white"
                android:textSize="@dimen/text_size_register"
                android:theme="@style/myEditTextStyle" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/white"
                android:theme="@style/myEditTextStyle"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtPassWord"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/Password"
                    android:textColorHint="@color/white"
                    android:textSize="@dimen/text_size_register"
                    android:theme="@style/myEditTextStyle" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/btnCompleted"
                style="@style/btn_start_activity"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/padding_ll_welcome"
                android:background="@drawable/btn_click_sart_activity"
                android:text="@string/completed" />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>